# surrealdb-gemini

./: Makefile  README.md  pyproject.toml
schema/: chats.surql  define_ns_db.surql  token.surql
src/surrealdb_gemini/: __main__.py
src/surrealdb_openai/: __main__.py
