[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surrealdb_gemini"
version = "0"
description = "Example of RAG using SurrealDB and Gemini"
authors = [
    {name="Alessandro Pireno", email="alessandro@pireno.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11, <3.12"
dependencies = [
    "pandas",
    "wget",
    "pandas-stubs",
    "surrealdb @ git+https://github.com/surrealdb/surrealdb.py.git#v.0.3.2",
    "tqdm",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "GitPython",
    "beautifulsoup4",
    "markdown"
]

[project.scripts]
surreal-docs-insert = "surrealdb_gemini.__main__:surreal_docs_insert"
get-docs-data = "surrealdb_gemini.__main__:get_docs_data"

[tool.ruff]
target-version = "py311"
line-length = 80
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

